--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VUE_APP_PUSHER_APP_ID=901091
 VUE_APP_PUSHER_KEY=fc3ee321258e85ff5872
 VUE_APP_PUSHER_CLUSTER=ap2
 VUE_APP_PUSHER_AUTH_ENDPOINT=https://gn501ltkg7.execute-api.us-east-1.amazonaws.com/default/dictaweb-pusher-auth
+VUE_APP_SENTRY_DATA_SOURCE_NAME_URL=https://5c5b43e3e6e54ba7846ba5829f93fef0@sentry.io/1551474
