--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@sentry/browser": "^5.9.1",
+    "@sentry/integrations": "^5.8.0",
     "core-js": "^3.3.2",
+    "jspdf": "^1.5.3",
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
