--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@sentry/integrations": "^5.8.0",
     "core-js": "^3.3.2",
     "jspdf": "^1.5.3",
+    "jsqr": "^1.2.0",
+    "libsodium-wrappers": "^0.7.6",
     "pusher-js": "^5.0.2",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
@@ -24,6 +27,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
