--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "libsodium-wrappers": "^0.7.6",
     "pusher-js": "^5.0.2",
     "qrcode": "^1.4.4",
+    "text-encoding": "^0.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
